# HomeGuard

./: ADR-002.md  ADR-004.md  README.md
docs/: ADR-001.md
docs/adrs/: ADR-003.md  ADR-005.md
docs/diagramas/: arquitetura.md  embeddings.md  fallback_tracking.md  multicameras.md  notificacoes.md
docs/regra-negocio/: rn.md  tasks.md
server/: camera_client.py  homeguard.db  main.py  pyproject.toml
server/api/v1/: person.py
server/core/: database.py
server/crud/: person.py
server/models/: person.py
server/schemas/: person.py
