[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "email-validator>=2.3.0",
    "fastapi>=0.117.1",
    "huggingface-hub>=0.35.1",
    "onnxruntime>=1.23.0",
    "opencv-python>=4.12.0.88",
    "opencv-python-headless>=4.12.0.88",
    "pip>=25.2",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]
